--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,3 @@
-# Ignore Python cache
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-*.db
-*.sqlite3
-
 # Ignore virtual environments
 venv/
 ENV/
@@ -14,6 +6,7 @@ env/
 # Ignore Rasa cache
 .rasa/
 .cache/
+tests/
 
 # Ignore temporary files
 *.log
